remove IDE files and update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,39 @@
-# Python 編譯產物
+# =========================
+# Visual Studio / IDE
+# =========================
+.vs/
+.vscode/
+*.suo
+*.user
+*.userosscache
+*.slnx
+
+# =========================
+# Python
+# =========================
 __pycache__/
 *.pyc
 *.pyo
-
-# 虛擬環境與環境變數
 venv/
 .env
 
-# SQLite 資料庫
+# =========================
+# Database
+# =========================
 *.db
+*.sqlite
 
-# 系統暫存檔
+# =========================
+# OS / Temp
+# =========================
 .DS_Store
 Thumbs.db
 *.swp
 
-# 測試日誌或其他暫存檔
+# =========================
+# Logs / Test
+# =========================
 *.log
 *.bak
 *.coverage
 *.pytest_cache/
-
-# VSCode 設定
-.vscode/
