fix: add missing runtime dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,23 @@
+# ===============================
+# Core API
+# ===============================
 fastapi>=0.110,<1.0
 uvicorn[standard]>=0.27,<1.0
 
+# ===============================
 # WebSocket / OCPP
+# ===============================
 websockets>=10.4,<12
 ocpp==0.26.0
 
+# ===============================
 # Utilities
+# ===============================
 requests>=2.31
 python-dateutil>=2.8
 
-# PDF（⚠️ 固定版本，避免 Python 3.10/3.11 相容問題）
+# ===============================
+# PDF 產生（Render 必須明確安裝）
+# ⚠️ 固定版本，避免 Python 3.10 / 3.11 相容問題
+# ===============================
 reportlab==4.0.8
