fix: add missing runtime dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,11 @@ requests>=2.31
 python-dateutil>=2.8
 
 # ===============================
+# Timezone support (Python 3.8 fix)
+# ===============================
+backports.zoneinfo>=0.2.1
+
+# ===============================
 # PDF 產生（Render 必須明確安裝）
-# ⚠️ 固定版本，避免 Python 3.10 / 3.11 相容問題
 # ===============================
 reportlab==4.0.8
